--- a/templates/actor/dialog/targeted-attack.hbs
+++ b/templates/actor/dialog/targeted-attack.hbs
@@ -6,8 +6,10 @@
       <div class="eyes"><button data-tooltip="Eyes" name="eyes"></button></div>
       <div class="head-bottom"><button data-tooltip="Head" name="head"></button></div>
       <div class="left-arm"><button data-tooltip="Arm" name="arm"></button></div>
+      <div class="left-hand"><button data-tooltip="Carried item" name="carried"></button></div>
       <div class="torso"><button data-tooltip="Torso" name="torso"></button></div>
       <div class="right-arm"><button data-tooltip="Arm" name="arm"></button></div>
+      <div class="right-hand"><button data-tooltip="Carried item" name="carried"></button></div>
       <div class="groin"><button data-tooltip="Groin" name="groin"></button></div>
       <div class="left-leg"><button data-tooltip="Leg" name="leg"></button></div>
       <div class="right-leg"><button data-tooltip="Leg" name="leg"></button></div>
