--- a/templates/actor/dialog/attack.hbs
+++ b/templates/actor/dialog/attack.hbs
@@ -143,7 +143,7 @@
   </div>
   <div class="form-group">
     {{#unless targeted}}
-    <button type="button" data-add-target>Add Target</button>
+    <button type="button" data-add-target>Targeted Attack</button>
     {{else}}
     <div class="targeted flex">
       <div>
