--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -832,19 +832,19 @@ a.inline-roll,
   width: 100%;
   background:#1d5427
 }
-.sheet .character-status{
+.sheet .character .character-status{
     width:200px;
 }
-.sheet .character-status input {
+.sheet .character .character-status input {
   width: 50px;
   height: 50px;
 }
-.sheet .character-status i {
+.sheet .character .character-status i {
   font-size: 20pt;
   display: block;
   width: 100%;
 }
-.sheet #xpbar progress::-webkit-progress-value {
+.sheet .character #xpbar progress::-webkit-progress-value {
   display: inline-block;
   float: left;
   height: 11px;
@@ -853,6 +853,6 @@ a.inline-roll,
   border-radius: 15px;
   box-shadow: 0px 0px 6px #777 inset;
 }
-.sheet .bio td{
+.sheet .character .bio td{
     padding-right:10px;
 }
