--- a/templates/item/item-foodAnddrink-sheet.hbs
+++ b/templates/item/item-foodAnddrink-sheet.hbs
@@ -23,7 +23,8 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description">Description</a>
-    <a class="item" id ="customEffectsNav" data-tab="customEffects">Custom Effects</a>
+    <a class="item" id ="customEffectsNav" data-tab="customEffects">Reactions</a>
+    <a class="item" data-tab="effects">Effects</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -32,7 +33,7 @@
     <div class="tab" data-group="primary" data-tab="description">
       {{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}
     </div>
-    {{!-- Effects Tab --}}
+    {{!-- Reactions Tab --}}
     <div class="tab customEffects" data-group="primary" data-tab="customEffects">
       <table>
         <tr>
@@ -115,7 +116,10 @@
       </table>
       <button id="effectSaveBtn">SAVE</button>
       <div id="savedMessage"></div>
-      {{!--{{> "systems/arcane-arcade-fallout/templates/item/parts/item-effects.hbs"}} REPLACED THE REAL EFFECTS TEMPLATE FOR CONSUMABLES --}}
+    </div>
+    {{!-- Effects Tab --}}
+    <div class="tab effects" data-group="primary" data-tab="effects">
+      {{> "systems/arcane-arcade-fallout/templates/item/parts/item-effects.hbs"}}
     </div>
   </section>
 </form>
