--- a/templates/item/item-condition-sheet.hbs
+++ b/templates/item/item-condition-sheet.hbs
@@ -32,7 +32,7 @@
       <table>
         <tr>
           <td>Attribute Key</td>
-          <td>Change Mode</td>
+          <td>Mode</td>
           <td>Effect</td>
         </tr>
         <tr>
