--- a/templates/item/item-miscItem-sheet.hbs
+++ b/templates/item/item-miscItem-sheet.hbs
@@ -10,7 +10,7 @@
  <table>
      <tr>
     <td>
-       Being Worn: <input type="checkbox" name="system.worn" {{checked system.worn}} />
+       Being Worn: <input type="checkbox" name="system.worn" worn="{{item._id}}" {{checked system.worn}} />
     </td>
     <td>
        Filled: <input type="checkbox" name="system.filled" {{checked system.filled}} />
