DragnDrop items now create links in description
Also fixed Power Armors not equipping properly

--- a/templates/item/item-background-sheet.hbs
+++ b/templates/item/item-background-sheet.hbs
@@ -24,7 +24,7 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
     {{!-- Description Tab --}}
-      <div class="tab htmlfield" data-group="primary" data-tab="description">
+      <div class="tab htmlfield" item-description data-group="primary" data-tab="description">
           <input class="mediuminput" type="text" name="system.skill1.value" value="{{system.skill1.value}}" hidden />
           <input class="mediuminput" type="text" name="system.skill2.value" value="{{system.skill2.value}}" hidden />
           <input class="mediuminput" type="text" name="system.skill3.value" value="{{system.skill3.value}}" hidden />
