--- a/templates/item/item-explosive-sheet.hbs
+++ b/templates/item/item-explosive-sheet.hbs
@@ -56,7 +56,7 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
     {{!-- Description Tab --}}
-    <div class="tab" data-group="primary" data-tab="description" style="padding: 20px">
+    <div class="tab" item-description data-group="primary" data-tab="description" style="padding: 20px">
       {{editor system.properties target="system.properties" button=true engine="prosemirror"}}
     </div>
     {{!-- Effects Tab --}}
