--- a/templates/item/item-armorUpgrade-sheet.hbs
+++ b/templates/item/item-armorUpgrade-sheet.hbs
@@ -82,7 +82,7 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
     {{!-- Description Tab --}}
-    <div class="tab htmlfield" data-group="primary" data-tab="description">
+    <div class="tab htmlfield" item-description data-group="primary" data-tab="description">
       {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the rollData prop. --}}
       {{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}
     </div>      
