--- a/templates/item/item-condition-sheet.hbs
+++ b/templates/item/item-condition-sheet.hbs
@@ -24,7 +24,7 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
     {{!-- Description Tab --}}
-    <div class="tab" data-group="primary" data-tab="description">
+    <div class="tab" item-description data-group="primary" data-tab="description">
       {{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror" editable=editable}}
     </div>
     {{!-- Reactions Tab --}}
