--- a/templates/item/item-medicine-sheet.hbs
+++ b/templates/item/item-medicine-sheet.hbs
@@ -29,7 +29,7 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
     {{!-- Description Tab --}}
-      <div class="tab" data-group="primary" data-tab="description">
+      <div class="tab" item-description data-group="primary" data-tab="description">
        {{editor system.description target="system.description" button=true engine="prosemirror"}}
       </div>
     {{!-- Effects Tab --}}
