--- a/templates/item/item-sheet.hbs
+++ b/templates/item/item-sheet.hbs
@@ -19,7 +19,7 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
     {{!-- Description Tab --}}
-    <div class="tab" data-group="primary" data-tab="description">
+    <div class="tab" item-description data-group="primary" data-tab="description">
       {{editor system.description target="system.description" rollData=rollData button=true owner=owner editable=editable engine="prosemirror"}}
     </div>
 
