--- a/templates/item/item-trait-sheet.hbs
+++ b/templates/item/item-trait-sheet.hbs
@@ -36,7 +36,7 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
     {{!-- Description Tab --}}
-    <div class="tab htmlfield" data-group="primary" data-tab="description">
+    <div class="tab htmlfield" item-description data-group="primary" data-tab="description">
       {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to the
       rollData prop. --}}
        {{editor system.description target="system.description" button=true engine="prosemirror" collaborate=false}}
